--- a/index.html
+++ b/index.html
@@ -431,11 +431,10 @@
 				agreement: {
 					isRequired: true,
 					isChecked: true,
-					isLink: 'https://artstranger.ru/privacy.html',
+					isLink: 'https://www.stroika-store.ru/index.html',
 				},
 				nameIsRequired: true,
 				telIsRequired: true,
-                emailIsRequired: true,
 			});
 		});
 	</script>
