--- a/index.html
+++ b/index.html
@@ -382,14 +382,15 @@
 </div>
 </div> 
      <div class="footer-2">Copyright © 2022. Все права защищены и охраняются законом.
-	     <a href="https://freekassa.ru" target="_blank" rel="noopener noreferrer">
-  <img src="https://cdn.freekassa.ru/banners/big-dark-1.png" title="Прием платежей на сайте">
+		     
 </a>
 </div> 
 </div>
 </div>
 </div>
-    
+<a href="https://freekassa.ru" target="_blank" rel="noopener noreferrer">
+  <img src="https://cdn.freekassa.ru/banners/small-red-1.png" title="Прием платежей на сайте">
+</a>    
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
 
