--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 		<div class="product__info">
 			<span class="product__term">Артикул: 879876</span>
 			<span class="product__available">В наличии: 50 000 шт.</span>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a>
+
 		</div>
 		<div class="product__price ">
             <div class="product__price product-price__current"><span class="product__price-number">50</span> ₽</div>
