--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
             </div>
 
             <div class='btn' tabindex="0">
-                <div class='button'>
-                	КОРЗИНА
-                <span class="cart2__quantity"></span>
+                <!--Библиотека jQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--Готовый скрипт корзины-->
+<script defer src="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.js"></script>
+
+<!--Стили элементов для корзины-->
+<link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
+
+
+
                 </div>
                             <form action="">
 		<button  class="product__btn">КОРЗИНА</button>
