--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
                 </div>
             </div>
 
-            <div class='btn' tabindex="0">
-                <div class='button'>
-                	КОРЗИНА
-                <span class="cart2__quantity"></span>
-                </div>
+            <div class='btn1' tabindex="0">
+              
                             <form action="">
 
 
