--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
 			<span class="product__term">Артикул: 879876</span>
 			<span class="product__available">В наличии: 50 000 шт.</span>
 			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a>
-
+<div id="easynetshop-custom-orderfinalform">
+     Спасибо! Вы успешно оформили заказ №{%zakaz%} на сумму {%itogo%} руб.<br>
+     Информация о деталях заказа направлена на вашу почту: {%email%}
+</div>
 		</div>
 		<div class="product__price ">
             <div class="product__price product-price__current"><span class="product__price-number">50</span> ₽</div>
