--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 		<div class="product__price product-price">
 			<span class="product-price__current">2470₽ лист</span>
 			<span class="product-price__old">/За один м2</span>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313373">Купить</a>
+
 		</div>
         <form action="index5.html">
 		<button class="product__btn">Добавить в корзину</button>
