--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
 		<div class="product__price product-price">
 			<span class="product-price__current">1050₽ шт.</span>
 			<span class="product-price__old">За 1 шт.</span>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313371">Купить</a>
+
 		</div>
         <form action='index6.html'>
 		<button class="product__btn">Добавить в корзину</button>
