--- a/index.html
+++ b/index.html
@@ -262,19 +262,21 @@
 			<ul class="product__image-pagination image-pagination" aria-hidden="true"></ul>
 		</a>
 		<h3 class="product__title">
-			<a href="#">Строительство домов и котеджей под ключ</a>
+			<a href="#">Строительство домов и коттеджей под ключ</a>
 		</h3>
 		<div class="product__props">
 
 			<span class="product__testimonials">83 отзыва</span>
 		</div>
 		<div class="product__info">
-			<span class="product__term">Артикул: 879876</span>
+			<span class="product__term">Артикул: 649863</span>
 			<span class="product__available"></span>
 		</div>
 		<div class="product__price product-price">
 			<span class="product-price__current">От 5000 ₽ </span>
 			<span class="product-price__old">/ За один м2</span>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313420">Купить</a>
+
 		</div>
         <form action='index1.html'>
 		<button class="product__btn">Заказать</button>
