--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			<span class="product__testimonials">83 отзыва</span>
 		</div>
 		<div class="product__info">
-			<span class="product__term">Артикул: 649863</span>
+			<span class="product__term">Артикул: 452895</span>
 			<span class="product__available"></span>
 		</div>
 		<div class="product__price product-price">
@@ -304,11 +304,14 @@
 			<span class="product__testimonials">83 отзыва</span>
 		</div>
 		<div class="product__info">
-			<span class="product__term">Артикул: 879876</span>
+			<span class="product__term">Артикул: 544710</span>
 		</div>
 		<div class="product__price product-price"><p>
 			<span class="product-price__current">От 500₽-1700₽</span>
 			<span class="product-price__old">/ За один м2</span>
+<a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Купить</a>
+
+
 		</div>
         <form action='index2.html'>
 		<button class="product__btn">Заказать</button>
