--- a/index.html
+++ b/index.html
@@ -339,11 +339,13 @@
 			<span class="product__testimonials">83 отзыва</span>
 		</div>
 		<div class="product__info">
-			<span class="product__term">Артикул: 879876</span>
+			<span class="product__term">Артикул: 235941</span>
 		</div><br>
 		<div class="product__price product-price">
 			<span class="product-price__current">ОТ 100 ₽ </span>
 			<span class="product-price__old">/ За один м2</span>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Купить</a>
+
 		</div>
         <form action="index3.html">
 		<button class="product__btn">Заказать</button>
