--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </div>
 </div>
 </div>
-           <div class='tovar2'><h2><span>Услуги</span></h2>
+          <br> <div class='tovar2'><h2><span>Услуги</span></h2>
     <div class='all2'>
 <div class='content2'>
 	<article class="product">
