--- a/index.html
+++ b/index.html
@@ -423,37 +423,37 @@
 
 
 
-<link rel="stylesheet" href="smartbasket/css/smartbasket.min.css">
+////<link rel="stylesheet" href="smartbasket/css/smartbasket.min.css">///
 
-<div class="smart-basket__wrapper"></div>
+/// <div class="smart-basket__wrapper"></div>///
 
-<script src="./smartbasket/js/smartbasket.min.js"></script>
+///<script src="./smartbasket/js/smartbasket.min.js"></script>///
 
-	<script>
-		$(function () {
-			$('.smart-basket__wrapper').smbasket({
-				productElement: 'product',
-				buttonAddToBasket: 'product__btn',
-				productPrice: 'product__price-number',
-				productSize: 'product__size-element',
+	///<script>///
+	///	$(function () {
+			///$('.smart-basket__wrapper').smbasket({
+			///	productElement: 'product',
+			///	buttonAddToBasket: 'product__btn',
+			///	productPrice: 'product__price-number',
+			///	productSize: 'product__size-element',
 				
-				productQuantityWrapper: 'product__quantity',
-				smartBasketMinArea: 'button',
-				countryCode: '+7',
-				smartBasketCurrency: '₽',
-				smartBasketMinIconPath: './smartbasket/img/shopping-basket-wight.svg',
+			///	productQuantityWrapper: 'product__quantity',
+			///	smartBasketMinArea: 'button',
+			///	countryCode: '+7',
+			///	smartBasketCurrency: '₽',
+			///	smartBasketMinIconPath: './smartbasket/img/shopping-basket-wight.svg',
 
-				agreement: {
-					isRequired: true,
-					isChecked: true,
-					isLink: 'https://www.stroika-store.ru/index.html',
-				},
-				nameIsRequired: true,
-				telIsRequired: true,
-                emailIsRequired: true,
-			});
-		});
-	</script>
+			///	agreement: {
+			///		isRequired: true,
+			///		isChecked: true,
+			///		isLink: 'https://www.stroika-store.ru/index.html',
+			///	},
+			///	nameIsRequired: true,
+			///	telIsRequired: true,
+            ///    emailIsRequired: true,
+	///		});
+		///});
+	///</script>
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-e2cd5312-0fa7-48f2-a602-f9f3852237ca"></div>
