--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@
 		<div class="product__price product-price"><p>
 			<span class="product-price__current">От 500₽-1700₽</span>
 			<span class="product-price__old">/ За один м2</span>
-<a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Купить</a>
+<a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Заказать</a>
 
 
 		</div>
         <form action='index2.html'>
-		<button class="product__btn">Заказать</button>
+		<button class="product__btn">Ознакомиться</button>
         </form>
 	</article>
     <article class="product">
@@ -344,11 +344,11 @@
 		<div class="product__price product-price">
 			<span class="product-price__current">ОТ 100 ₽ </span>
 			<span class="product-price__old">/ За один м2</span>
-			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Купить</a>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Заказать</a>
 
 		</div>
         <form action="index3.html">
-		<button class="product__btn">Заказать</button>
+		<button class="product__btn">Ознакомиться</button>
         </form>
 	</article>
     
