--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
 		<div class="product__price product-price">
 			<span class="product-price__current">От 5000 ₽ </span>
 			<span class="product-price__old">/ За один м2</span>
-			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313420">Купить</a>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313420">Приобрести на дом</a>
 
 		</div>
         <form action='index1.html'>
-		<button class="product__btn">Заказать</button>
+		<button class="product__btn">Ознакомиться</button>
         </form>
     </article>
     <article class="product">
@@ -309,7 +309,7 @@
 		<div class="product__price product-price"><p>
 			<span class="product-price__current">От 500₽-1700₽</span>
 			<span class="product-price__old">/ За один м2</span>
-<a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Заказать</a>
+<a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Приобрести на дом</a>
 
 
 		</div>
@@ -344,7 +344,7 @@
 		<div class="product__price product-price">
 			<span class="product-price__current">ОТ 100 ₽ </span>
 			<span class="product-price__old">/ За один м2</span>
-			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Заказать</a>
+			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Приобрести на дом</a>
 
 		</div>
         <form action="index3.html">
