--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
 
 		</div>
 		<div class="product__price ">
-            <div class="product__price product-price__current"><span class="product__price-number">50</span> ₽</div>
+            <div class="product__price product-price__current"><span class="product__price-number">50</span> ₽
 
 
 			<span class="product-price__old">2 541,50 ₽ м2</span>
 						<a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a>
-		</div>
+		</div></div>
 		
 		<button class="product__btn"
                 
