--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
 		</div>
         <form action='index1.html'>
-		<button class="product__btn">Ознакомиться</button>
+		<button class="product__btn">Ознакомиться с услугой</button>
         </form>
     </article>
     <article class="product">
@@ -302,7 +302,7 @@
 
 		</div>
         <form action='index2.html'>
-		<button class="product__btn">Ознакомиться</button>
+		<button class="product__btn">Ознакомиться с услугой</button>
         </form>
 	</article>
     <article class="product">
@@ -336,7 +336,7 @@
 
 		</div>
         <form action="index3.html">
-		<button class="product__btn">Ознакомиться</button>
+		<button class="product__btn">Ознакомиться с услугой</button>
         </form>
 	</article>
     
