--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		</div><a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a></div>
 		
 	 <form action="index4.html">
-		<button class="product__btn">Ознакомиться с описанием товара</button>
+		<button class="product__btn">Описание товара</button>
         </form>
         
 	</article>
@@ -189,7 +189,7 @@
 
 		</div>
         <form action="index5.html">
-		<button class="product__btn">Ознакомиться с описанием товара</button>
+		<button class="product__btn">Описание товара</button>
         </form>
 	</article>
     <article class="product">
@@ -224,7 +224,7 @@
 
 		</div>
         <form action='index6.html'>
-		<button class="product__btn">Ознакомиться с описанием товара</button>
+		<button class="product__btn">Описание товара</button>
         </form>
 	</article>
     
