--- a/index.html
+++ b/index.html
@@ -427,7 +427,52 @@
 <link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
 
 
+<p>&nbsp;</p><nobr>
+<div id="adfox_166314253620393570"></div>
+<script>
+    window.yaContextCb.push(()=>{
+        Ya.adfoxCode.createAdaptive({
+            ownerId: 260971,
+            containerId: 'adfox_166314253620393570',
+            params: {
+                p1: 'cvter',
+                p2: 'gxms'
+            }
+        }, ['desktop'], {
+            tabletWidth: 830,
+            phoneWidth: 480,
+            isAutoReloads: false
+        })
+    })
+</script>
+<script>
+setInterval(function(){            
+window.Ya.adfoxCode.reload('adfox_166314253620393570', {onlyIfWasVisible: true})
+}, 30000);
+</script>
 
+<div id="adfox_166314253780714745"></div>
+<script>
+    window.yaContextCb.push(()=>{
+        Ya.adfoxCode.createAdaptive({
+            ownerId: 260971,
+            containerId: 'adfox_166314253780714745',
+            params: {
+                p1: 'cvtem',
+                p2: 'hbev'
+            }
+        }, ['tablet', 'phone'], {
+            tabletWidth: 830,
+            phoneWidth: 480,
+            isAutoReloads: false
+        })
+    })
+</script>
+<script>
+setInterval(function(){            
+window.Ya.adfoxCode.reload('adfox_166314253780714745', {onlyIfWasVisible: true})
+}, 30000);
+</script></nobr>
 
 
 
