--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 			<span class="product__term">Артикул: 544710</span>
 		</div>
 		<div class="product__price product-price"><p>
-			<span class="product-price__current">От 500₽-1700₽</span>
+			<span class="product-price__current">От 1700₽</span>
 			<span class="product-price__old">/ За один м2</span>
 <a class="btn-ens-action btn-ens-style" data-rel="a8492677313421">Заказать</a>
 
