--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
 
 			<span class="product-price__old">2 541,50 ₽ м2</span>
-					
-		</div><a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a></div>
+		<a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a>			
+		</div></div>
 		
 	 <form action="index4.html">
 		<button class="product__btn">Описание товара</button>
