--- a/index.html
+++ b/index.html
@@ -146,14 +146,12 @@
 </div>
 
 		</div>
-		<div class="product__price ">
-            <div class="product__price product-price__current"><span class="product__price-number">50</span> ₽
+            <div class="product__price product-pricet"><span class="product__price-number">50</span> ₽
 
 
 			<span class="product-price__old">2 541,50 ₽ м2</span>
 		<a class="btn-ens-action btn-ens-style" data-rel="a8492677313372">Купить</a>			
-		</div></div>
-		
+		</div>
 	 <form action="index4.html">
 		<button class="product__btn">Описание товара</button>
         </form>
