--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </div>
 
 		</div>
-            <div class="product__price product-pricet"><span class="product__price-number">50</span> ₽
+            <div class="product__price product-price"><span class="product-price__current">50</span> ₽
 
 
 			<span class="product-price__old">2 541,50 ₽ м2</span>
