--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </div>
 
 		</div>
-            <div class="product__price product-price"><span class="product-price__current">50</span> ₽
+            <div class="product__price product-price"><span class="product-price__current">50₽ шт.</span>
 
 
 			<span class="product-price__old">2 541,50 ₽ м2</span>
@@ -328,7 +328,7 @@
 			<span class="product__term">Артикул: 235941</span>
 		</div><br>
 		<div class="product__price product-price">
-			<span class="product-price__current">ОТ 100 ₽ </span>
+			<span class="product-price__current">ОТ 100₽ </span>
 			<span class="product-price__old">/ За один м2</span>
 			<a class="btn-ens-action btn-ens-style" data-rel="a8492677313422">Заказать</a>
 
