--- a/index.html
+++ b/index.html
@@ -469,7 +469,14 @@ window.Ya.adfoxCode.reload('adfox_166314253780714745', {onlyIfWasVisible: true})
 </script></nobr>
 
 
-
+<script> 
+    var body=document.getElementsByTagName('body')[0];
+    var script=document.createElement('script');
+    script.async=true;
+    script.src='https://widget.13Chats.com/assets/loader.js';
+    script.setAttribute('data-chats-widget-id','значение ID');
+    body.appendChild(script); 
+</script>
 
 
 
