--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@ window.Ya.adfoxCode.reload('adfox_166314253780714745', {onlyIfWasVisible: true})
 
 
 
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 
 
 
