--- a/index8.html
+++ b/index8.html
@@ -23,8 +23,8 @@
             <div class='nav'>
                 <a class='nav-item' href="index.html"><i class="fa-solid fa-house"></i>&nbspГлавная</a>
                 <a class='nav-item' href="index8.html"><i class="fa-solid fa-inbox"></i>&nbspТовары</a>
-                <a class='nav-item' href="@"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
-                <a class='nav-item' href="@"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
+                <a class='nav-item' href="index17.html"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
+                <a class='nav-item' href="index18.html"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
                 <a class='nav-item' href="index15.html"><i class="fa-solid fa-compass"></i>&nbspКонтакты</a>
                 <a class='nav-item' href="index16.html">О нас</a>
             </div>
@@ -44,11 +44,10 @@
             </div>
 
             <div class='btn' tabindex="0">
-                <div class='button'><href="index7.html">КОРЗИНА
-                <span class="cart__quantity">0</span>
-                </div>
-                            <form action="index7.html">
-		<button  class="product__btn">КОРЗИНА</button>
+            
+          
+                            <form action="">
+		
         </form>
             </div>
         </div>
