--- a/index8.html
+++ b/index8.html
@@ -470,5 +470,7 @@
 </div>
 </div>
 </div>
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 </body>
 </html>
