--- a/index17.html
+++ b/index17.html
@@ -40,11 +40,8 @@
             </div>
 
             <div class='btn' tabindex="0">
-                <div class='button'><href="index7.html">КОРЗИНА
-                <span class="cart__quantity">0</span>
-                </div>
-                            <form action="index7.html">
-		<button  class="product__btn6">КОРЗИНА</button>
+              
+                            <form action="">
         </form>
             </div>
         </div>
