--- a/index17.html
+++ b/index17.html
@@ -69,14 +69,14 @@
 						<li><a href="index8.html">«Домострой»</a></li>
 					</ul>
                 <div class="news">
-				<h3>Новости</h3>
+					<h3>Новости</h3>
 				<p>
-					<span>31.10.2022</span>
+					<span>01.06.2023</span>
 					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>31.10.2022</span>
-					<a href="#">Скидка 5% заказавшим услугу</a>
+					<span>01.06.2023</span>
+					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
 				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
                 
