--- a/index8.html
+++ b/index8.html
@@ -77,13 +77,15 @@
 			<div class="news">
 				<h3>Новости</h3>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Поступили в продажу новые телефоны sumsung</a>
+					<span>01.06.2023</span>
+					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Подарки всем купившим apple iphone 4s</a>
+					<span>01.06.2023</span>
+					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
+				
+				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
 			</div>
 			<div class="info">
 				<h3>Способы оплаты:</h3>
