--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
 			<div class="news">
 				<h3>Новости</h3>
 				<p>
-					<span>31.10.2012</span>
+					<span>01.06.2023</span>
 					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>31.10.2012</span>
+					<span>01.06.2023</span>
 					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
+				
+				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
 			</div>
 			<div class="info">
 				<h3>Способы оплаты:</h3>
