--- a/index18.html
+++ b/index18.html
@@ -40,11 +40,8 @@
             </div>
 
            <div class='btn' tabindex="0">
-                <div class='button'><href="index7.html">КОРЗИНА
-                <span class="cart__quantity">0</span>
-                </div>
-                            <form action="index7.html">
-		<button  class="product__btn6">КОРЗИНА</button>
+
+                            <form action="">
         </form>
             </div>
         </div>
@@ -72,15 +69,16 @@
 						<li><a href="index8.html">«Домострой»</a></li>
 					</ul>
                 <div class="news">
-				<h3>Новости</h3>
+		<h3>Новости</h3>
 				<p>
-					<span>31.10.2022</span>
+					<span>01.06.2023</span>
 					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>31.10.2022</span>
-					<a href="#">Скидка 5% заказавшим услугу</a>
+					<span>01.06.2023</span>
+					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
+				
 				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
                 
 			</div>
@@ -180,5 +178,18 @@
 </div>
 </div>
 </div>
+
+<!--Библиотека jQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--Готовый скрипт корзины-->
+<script defer src="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.js"></script>
+
+<!--Стили элементов для корзины-->
+<link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
+
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 </body>
 </html>
