--- a/index16.html
+++ b/index16.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class='btn'>
-                <a class='button' href='#'>КОРЗИНА</a>
+ 
             </div>
         </div>
         
@@ -67,16 +67,17 @@
 						<li><a href="index8.html">«Домострой»</a></li>
 					</ul>
 			<div class="news">
-				<h3>Новости</h3>
+		<h3>Новости</h3>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Поступили в продажу новые телефоны sumsung</a>
+					<span>01.06.2023</span>
+					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Подарки всем купившим apple iphone 4s</a>
+					<span>01.06.2023</span>
+					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
-				<a href="#" class="news-arh">Архив новостей</a>
+				
+				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
 			</div>
 			<div class="info">
 				<h3>Способы оплаты:</h3>
@@ -206,5 +207,17 @@
 </div>
 </div>
 </div>
+<!--Библиотека jQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--Готовый скрипт корзины-->
+<script defer src="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.js"></script>
+
+<!--Стили элементов для корзины-->
+<link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 </body>
+
 </html>
