--- a/index16.html
+++ b/index16.html
@@ -19,8 +19,8 @@
             <div class='nav'>
                 <a class='nav-item' href="index.html"><i class="fa-solid fa-house"></i>&nbspГлавная</a>
                 <a class='nav-item' href="index8.html"><i class="fa-solid fa-inbox"></i>&nbspТовары</a>
-                <a class='nav-item' href="@"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
-                <a class='nav-item' href="@"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
+                <a class='nav-item' href="index17.html"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
+                <a class='nav-item' href="index18.html"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
                 <a class='nav-item' href="index15.html"><i class="fa-solid fa-compass"></i>&nbspКонтакты</a>
                 <a class='nav-item' href="index16.html">О нас</a>
             </div>
