--- a/index8.html
+++ b/index8.html
@@ -134,6 +134,19 @@
 		<div class="product__info">
 			<span class="product__term">Артикул: 879876</span>
 			<span class="product__available">В наличии: 50 000 шт.</span>
+			
+			<div id="easynetshop-custom-orderfinalform">
+	Заказ №{%zakaz%} оформлен, с вами свяжется наш менеджер!
+			<br>Вы можете оплатить заказ:<br>
+			<iframe frameborder="0" allowtransparency="true" scrolling="no" 
+			src="https://yoomoney.ru/embed/shop.xml?
+			account=410014493920221
+			&quickpay=shop&payment-type-choice=on&mobile-payment-type-choice=on&writer=seller
+			&targets={%zakaz%}+demo.easynetshop.ru
+			&default-sum={%itogo%}
+			&button-text=01
+			&successURL=" width="450" height="228"></iframe>
+</div>
 		</div>
 		<div class="product__price product-price">
 			<span class="product-price__current">50,83₽ шт.</span>
