--- a/index18.html
+++ b/index18.html
@@ -191,5 +191,16 @@
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
+	Заказ №{%zakaz%} оформлен, с вами свяжется наш менеджер!
+			<br>Вы можете оплатить заказ:<br>
+			<iframe frameborder="0" allowtransparency="true" scrolling="no" 
+			src="https://yoomoney.ru/embed/shop.xml?
+			account=410014493920221
+			&quickpay=shop&payment-type-choice=on&mobile-payment-type-choice=on&writer=seller
+			&targets={%zakaz%}+demo.easynetshop.ru
+			&default-sum={%itogo%}
+			&button-text=01
+			&successURL=" width="450" height="228"></iframe>
+</div>
 </body>
 </html>
