--- a/index1.html
+++ b/index1.html
@@ -187,6 +187,18 @@
 </div>
 </div>
 </div>
+<div id="easynetshop-custom-orderfinalform">
+	Заказ №{%zakaz%} оформлен, с вами свяжется наш менеджер!
+			<br>Вы можете оплатить заказ:<br>
+			<iframe frameborder="0" allowtransparency="true" scrolling="no" 
+			src="https://yoomoney.ru/embed/shop.xml?
+			account=410014493920221
+			&quickpay=shop&payment-type-choice=on&mobile-payment-type-choice=on&writer=seller
+			&targets={%zakaz%}+demo.easynetshop.ru
+			&default-sum={%itogo%}
+			&button-text=01
+			&successURL=" width="450" height="228"></iframe>
+</div>
 <!--Библиотека jQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
