--- a/index17.html
+++ b/index17.html
@@ -206,6 +206,7 @@
 </div>
 </div>
 </div>
+<div id="easynetshop-custom-orderfinalform">
 	Заказ №{%zakaz%} оформлен, с вами свяжется наш менеджер!
 			<br>Вы можете оплатить заказ:<br>
 			<iframe frameborder="0" allowtransparency="true" scrolling="no" 
