--- a/index4.html
+++ b/index4.html
@@ -16,11 +16,12 @@
             <div class='header-logo'>
                 <img src="str1.png" alt="">
             </div>
+
             <div class='nav'>
                 <a class='nav-item' href="index.html"><i class="fa-solid fa-house"></i>&nbspГлавная</a>
                 <a class='nav-item' href="index8.html"><i class="fa-solid fa-inbox"></i>&nbspТовары</a>
-                <a class='nav-item' href="@"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
-                <a class='nav-item' href="@"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
+                <a class='nav-item' href="index17.html"><i class="fa-sharp fa-solid fa-truck-fast"></i>&nbspУслуги</a>
+                <a class='nav-item' href="index18.html"><i class="fa-solid fa-city"></i>&nbspФирмы</a>
                 <a class='nav-item' href="index15.html"><i class="fa-solid fa-compass"></i>&nbspКонтакты</a>
                 <a class='nav-item' href="index16.html">О нас</a>
             </div>
@@ -40,7 +41,7 @@
             </div>
 
             <div class='btn'>
-                <a class='button' href='#'>КОРЗИНА</a>
+  
             </div>
         </div>
         
@@ -67,16 +68,17 @@
 						<li><a href="#">«Домострой»</a></li>
 					</ul>
 			<div class="news">
-				<h3>Новости</h3>
+			<h3>Новости</h3>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Поступили в продажу новые телефоны sumsung</a>
+					<span>01.06.2023</span>
+					<a href="#">Поступили в продажу стройматериалы</a>
 				</p>
 				<p>
-					<span>24.03.2012</span>
-					<a href="#">Подарки всем купившим apple iphone 4s</a>
+					<span>01.06.2023</span>
+					<a href="#">Скидки 5% заказавшим услугу</a>
 				</p>
-				<a href="#" class="news-arh">Архив новостей</a>
+				
+				<a href="https://www.banki.ru/products/currency/" class="news-arh">КУРС ₽ В $ И € </a>
 			</div>
 			<div class="info">
 				<h3>Способы оплаты:</h3>
@@ -354,5 +356,19 @@ F75                                                                             
 </div>
 </div>
 </div>
+
+<!--Библиотека jQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--Готовый скрипт корзины-->
+<script defer src="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.js"></script>
+
+<!--Стили элементов для корзины-->
+<link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
+
+
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 </body>
 </html>
