--- a/index4.html
+++ b/index4.html
@@ -109,7 +109,7 @@
 <div class='content2'>
 <article class='product'>
     		<h3 class="product__title">
-            <a href="#">Другие товары</a>
+            <a href="index8.html">Другие товары</a>
 		</h3>
 <div class="row">
 <div class="photo">
