--- a/index5.html
+++ b/index5.html
@@ -108,7 +108,7 @@
 <div class='content2'>
 <article class='product'>
     		<h3 class="product__title">
-            <a href="#">Другие товары</a>
+            <a href="index.html">Другие товары</a>
 		</h3>
 <div class="row">
 <div class="photo">
