--- a/index6.html
+++ b/index6.html
@@ -301,5 +301,20 @@ Krospan                                                                         
 </div>
 </div>
 </div>
+
+
+
+
+<!--Библиотека jQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--Готовый скрипт корзины-->
+<script defer src="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.js"></script>
+
+<!--Стили элементов для корзины-->
+<link href="https://lk.easynetshop.ru/frontend/v5/ens-a8492677.css" rel="stylesheet">
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-14434ba4-a016-47a6-a17e-72e78a34f0d3"></div>
 </body>
 </html>
