--- a/index6.html
+++ b/index6.html
@@ -108,7 +108,7 @@
 <div class='content2'>
 <article class='product'>
     		<h3 class="product__title">
-            <a href="#">Другие товары</a>
+            <a href="index8.html">Другие товары</a>
 		</h3>
 <div class="row">
 <div class="photo">
@@ -226,33 +226,9 @@ Krospan                                                                         
 </li>
 </ul>
 </div>
-<div class="card-calculator">
-<div class='ss'>
-<div class="card-calculator__volume">
-<span class="card-calculator__title">Выберите количество<i class="star-required">*</i>:</span>
 
-    <input class='form_input1' type='search' placeholder=""><span>шт.</span>
-
-</div>
-<div class="card-calculator__size">
-<span class="card-calculator__title">Выберите размер:</span>
-<select class="size-select">
-    <div clas='ss'>
-    <option value="0"><s>2500x1830x16мм.</s></option>
-    </div>
-</select>
-</div>
-
-<div class="price-box">
-<span class='sum'>21550 ₽</span> рублей за 1 поддон: 20 шт.  </div>
-
-
-
-<div class="card-calculator__warning">
-<i class="star-required">*</i> Минимальное количество заказа – 1 поддон<br>Цена указана с учетом доставки.</div>
-    		<button class="product__btn">Заказать</button>
-</div>
-</div>
+	
+	
 </div>
 </div>
 </div>
