--- a/index1.html
+++ b/index1.html
@@ -126,7 +126,7 @@
 			<ul class="product__image-pagination image-pagination" aria-hidden="true"></ul>
 		</a>
 		<h3 class="product__title">
-            <a href="#">Другие услуги</a>
+            <a href="index17.html">Другие услуги</a>
 		</h3>
 		<div class="product__props">
 
