--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 			&default-sum={%itogo%}
 			&button-text=01
 			&successURL=" width="450" height="228"></iframe>
+	<style>.powered {display:none}</style>
 </div>
 
 
